Fix the header menu on tablet devices

--- a/static/src/sass/modules/navs/_nav-header.scss
+++ b/static/src/sass/modules/navs/_nav-header.scss
@@ -285,10 +285,6 @@ $module: ".nav-header";
                 @include font-size(m);
             }
 
-            @include mq($until: md) {
-                margin-top: 10px;
-            }
-
         }
 
     }
